@@ -50,40 +50,57 @@ let () =
   assert_bound_check3 caml_string_set_32 empty_s 0 0l;
   assert_bound_check3 caml_string_set_64 empty_s 0 0L
 
+external bswap16: int -> int = "%bswap16"
+external bswap32: int32 -> int32 = "%bswap_int32"
+external bswap64: int64 -> int64 = "%bswap_int64"
 
+let swap16 x =
+  if Sys.big_endian
+  then bswap16 x
+  else x
+
+let swap32 x =
+  if Sys.big_endian
+  then bswap32 x
+  else x
+
+let swap64 x =
+  if Sys.big_endian
+  then bswap64 x
+  else x
 
 let () =
-  caml_string_set_16 s 0 0x1234;
+  caml_string_set_16 s 0 (swap16 0x1234);
   Printf.printf "%x %x %x\n%!"
-                (caml_string_get_16 s 0)
-                (caml_string_get_16 s 1)
-                (caml_string_get_16 s 2);
-  caml_string_set_16 s 0 0xFEDC;
+                (swap16 (caml_string_get_16 s 0))
+                (swap16 (caml_string_get_16 s 1))
+                (swap16 (caml_string_get_16 s 2));
+  caml_string_set_16 s 0 (swap16 0xFEDC);
   Printf.printf "%x %x %x\n%!"
-                (caml_string_get_16 s 0)
-                (caml_string_get_16 s 1)
-                (caml_string_get_16 s 2)
+                (swap16 (caml_string_get_16 s 0))
+                (swap16 (caml_string_get_16 s 1))
+                (swap16 (caml_string_get_16 s 2))
 
 let () =
-  caml_string_set_32 s 0 0x12345678l;
+  caml_string_set_32 s 0 (swap32 0x12345678l);
   Printf.printf "%lx %lx %lx\n%!"
-                (caml_string_get_32 s 0)
-                (caml_string_get_32 s 1)
-                (caml_string_get_32 s 2);
-  caml_string_set_32 s 0 0xFEDCBA09l;
+                (swap32 (caml_string_get_32 s 0))
+                (swap32 (caml_string_get_32 s 1))
+                (swap32 (caml_string_get_32 s 2));
+  caml_string_set_32 s 0 (swap32 0xFEDCBA09l);
   Printf.printf "%lx %lx %lx\n%!"
-                (caml_string_get_32 s 0)
-                (caml_string_get_32 s 1)
-                (caml_string_get_32 s 2)
+                (swap32 (caml_string_get_32 s 0))
+                (swap32 (caml_string_get_32 s 1))
+                (swap32 (caml_string_get_32 s 2))
 
 let () =
-  caml_string_set_64 s 0 0x1234567890ABCDEFL;
+  caml_string_set_64 s 0 (swap64 0x1234567890ABCDEFL);
   Printf.printf "%Lx %Lx %Lx\n%!"
-                (caml_string_get_64 s 0)
-                (caml_string_get_64 s 1)
-                (caml_string_get_64 s 2);
-  caml_string_set_64 s 0 0xFEDCBA0987654321L;
+                (swap64 (caml_string_get_64 s 0))
+                (swap64 (caml_string_get_64 s 1))
+                (swap64 (caml_string_get_64 s 2));
+  caml_string_set_64 s 0 (swap64 0xFEDCBA0987654321L);
   Printf.printf "%Lx %Lx %Lx\n%!"
-                (caml_string_get_64 s 0)
-                (caml_string_get_64 s 1)
-                (caml_string_get_64 s 2)
+                (swap64 (caml_string_get_64 s 0))
+                (swap64 (caml_string_get_64 s 1))
+                (swap64 (caml_string_get_64 s 2))
